Card 21 fix vehicle attributes